# telekom-nbiot-hackathon-2017

./: README.md  de-backend-login.md  de-cpp-development.md  de-pxt-development.md  de-ubirch-NB-IoT-Messaging.hex  de_QUECTEL_Modul_Anleitung  de_QUECTEL_Modul_Anleitung.md  deviceinfo.hex  en-cpp-development.md  en-pxt-development.md  en-ubirch-NB-IoT-Messaging.hex  mini-DE-NB-IoT-Example.hex  mini-EN-NB-IoT-Example.hex  sensors.md  ubirch-NB-IoT-Messaging.hex
nbiot-cpp-template/: CMakeLists.txt  README.md  config.json  ecc-generate.py  ecc-unpack.py  module.json  openocd.cfg  simulate_nbiot.py
nbiot-cpp-template/source/: main.cpp
nbiot-cpp-template/source/utils/: random.c  utils.cpp  utils.h
typescript/: grove-bmp280.ts  grove-i2c-color-sensor.ts  grove-ir-distance.ts  grove-sound-sensor.ts  grove-ultrasonic-ranger.ts  microphone.ts
